2003-04-18    Jimmy Yen <jimmy@yen.tp>

	* Extra checking to set screen only when the device sends core events.
	* Made KeepShape compatible with multiple screen setup.
	* Reenabled throttle and fake button 4/5 code. Can be disabled by
	  setting 'Option "MouseWheel" "off"'. This still needs work.
	* Unified cursor acceleration in both directions.

2003-04-17    Jimmy Yen <jimmy@yen.tp>

	* Software solution of dual channel input for USB devices.

2003-04-16    Jimmy Yen <jimmy@yen.tp>

	* Basic Xinerama setup support. Works with horizontal, non-overlapping
	  screen combinations with different resoluions. Users need to specify
	  'Option Xinerama "on"' for each absolute device.

2003-04-14    Jimmy Yen <jimmy@yen.tp>

	* Small KeepShape fix.
	* Cleaned up xf86WcmSendEvents.
	* Fallback case in device selection code.

2003-04-08    John E. Joganic <john@joganic.com>

	* Fixed USB tilt ranges.
	* Exploded out serial tablet initialization.

2003-04-07    John E. Joganic <john@joganic.com>

	* Fixed bug in tilt filter.
	* MaxZ determined at tablet detection
	* Changed pressure code; all values positive.
	* Added channel code, device proximity bound to channel

2003-04-07    Jimmy Yen <jimmy@yen.tp>

	* Set resolutions for USB tablets.

2003-04-06    John E. Joganic <john@joganic.com>

	* Refactored xf86Wacom.c into separate files.

2003-04-02    John E. Joganic <john@joganic.com>

	* Added J. Yen's "misc fixes" patch to xf86Wacom.c
	* Added J. Paisley's "reattach" patch to evdev.c

2003-03-31    John E. Joganic <john@joganic.com>

	* Added mousedev.c with fix to ignore wacom

2003-03-22    John E. Joganic <john@joganic.com>

	* Added ncurses detection.
	* Cleaned up output of xidump.
	* Added Dean Townsley's ISDV4 patch.

2003-03-08    John E. Joganic <john@joganic.com>

	* Added curses functionality to xidump.c, now default
	* xidump now builds by default

2003-03-07    John E. Joganic <john@joganic.com>

	* Added tabletdev.c framework (based on mousedev.c)